I hope this works. updated code to use new skills.

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,29 +1,29 @@
 {
-	"AIME.CoinsGP": "Ecus d'or",
-	"AIME.CoinsSP": "Pièces d'argent",
-	"AIME.CoinsCC": "Sous de cuivre",
-	"AIME.CoinsAbbrGP": "ÉO",
- 	"AIME.CoinsAbbrSP": "PA",
-  	"AIME.CoinsAbbrCC": "SC",
-	"AIME.AbilitySha": "Ombre",
-	"AIME.AbilityPerm": "Permanent",
-	"AIME.SkillLor": "Mystère",
-	"AIME.SkillRid": "Enigmes",
-	"AIME.SkillSha": "Conscience de l'Ombre",
-	"AIME.SkillTra": "Traditions",
-	"AIME.SkillIns": "Intuition",
-	"AIME.LanguagesCommon": "L'Ouistrain",
-	"AIME.LanguagesBlackSpeech": "Noir parler",
-	"AIME.LanguagesQuenya": "Quenya",
-	"AIME.LanguagesSindarin": "Sindarin",
-	"AIME.LanguagesDalish": "Dalien",
-	"AIME.LanguagesVale": "Langue de la Vallée de l'Anduin",
-	"AIME.LanguagesDwarvish": "Khuzdul",
-	"AIME.LanguagesWoodland": "Langue de la Fôret Noire",
-	"AIME.LanguagesRohan": "Rohirique ",
-	"AIME.LanguagesOrkish": "Orquien",
-	"AIME.Journey": "Voyage",
-	"AIME.Adventure": "Aventure",
+	"LOTRRP.CoinsGP": "Ecus d'or",
+	"LOTRRP.CoinsSP": "Pièces d'argent",
+	"LOTRRP.CoinsCC": "Sous de cuivre",
+	"LOTRRP.CoinsAbbrGP": "ÉO",
+ 	"LOTRRP.CoinsAbbrSP": "PA",
+  	"LOTRRP.CoinsAbbrCC": "SC",
+	"LOTRRP.AbilitySha": "Ombre",
+	"LOTRRP.AbilityPerm": "Permanent",
+	"LOTRRP.SkillLor": "Mystère",
+	"LOTRRP.SkillRid": "Enigmes",
+	"LOTRRP.SkillSha": "Conscience de l'Ombre",
+	"LOTRRP.SkillTra": "Traditions",
+	"LOTRRP.SkillIns": "Intuition",
+	"LOTRRP.LanguagesCommon": "L'Ouistrain",
+	"LOTRRP.LanguagesBlackSpeech": "Noir parler",
+	"LOTRRP.LanguagesQuenya": "Quenya",
+	"LOTRRP.LanguagesSindarin": "Sindarin",
+	"LOTRRP.LanguagesDalish": "Dalien",
+	"LOTRRP.LanguagesVale": "Langue de la Vallée de l'Anduin",
+	"LOTRRP.LanguagesDwarvish": "Khuzdul",
+	"LOTRRP.LanguagesWoodland": "Langue de la Fôret Noire",
+	"LOTRRP.LanguagesRohan": "Rohirique ",
+	"LOTRRP.LanguagesOrkish": "Orquien",
+	"LOTRRP.Journey": "Voyage",
+	"LOTRRP.Adventure": "Aventure",
 	"DND5E.PersonalityTraits": "Trait distinctif",
 	"DND5E.Ideals": "Spécialité",
 	"DND5E.Bonds": "Espoir",
@@ -31,6 +31,6 @@
 	"DND5E.AbilityShaAbbr": "omb",
 	"DND5E.AbilityPermAbbr": "per",
 	"DND5E.Race": "Culture",
-	"AIME.LivingStandard": "Niveau de vie",
-  	"AIME.Miserable": "Mélancolique"
+	"LOTRRP.LivingStandard": "Niveau de vie",
+  	"LOTRRP.Miserable": "Mélancolique"
 }
