--- a/lang/it.json
+++ b/lang/it.json
@@ -1,30 +1,30 @@
 {
-  "AIME.CoinsGP": "Soldi d'Oro",
-  "AIME.CoinsSP": "Penny d'Argento",
-  "AIME.CoinsCP": "Monete di Rame",
-  "AIME.CoinsAbbrGP": "GP",
-  "AIME.CoinsAbbrSP": "SP",
-  "AIME.CoinsAbbrCC": "CC",
-  "AIME.AbilitySha": "Ombra",
-  "AIME.AbilityPerm": "Permanente",
-  "AIME.SkillLor": "Sapienza",
-  "AIME.SkillRid": "Indovinelli",
-  "AIME.SkillSha": "Sapienza dell'Ombra",
-  "AIME.SkillTra": "Tradizioni",
-  "AIME.SkillIns": "Intuizione",
-  "AIME.LanguagesCommon": "Ovestron",
-  "AIME.LanguagesBlackSpeech": "Linguaggio Nero",
-  "AIME.LanguagesQuenya": "Quenya",
-  "AIME.LanguagesSindarin": "Sindarin",
-  "AIME.LanguagesDalish": "Daliano",
-  "AIME.LanguagesVale": "Lingua delle Valli dell'Anduin",
-  "AIME.LanguagesDwarvish": "Khuzdul",
-  "AIME.LanguagesWoodland": "Lingua del Bosco",
-  "AIME.LanguagesRohan": "Rohirric",
-  "AIME.LanguagesOrkish": "Orchesco",
-  "AIME.Audience": "Udienze",
-  "AIME.Journey": "Viaggio",
-  "AIME.Adventure": "Avventura",
+  "LOTRRP.CoinsGP": "Soldi d'Oro",
+  "LOTRRP.CoinsSP": "Penny d'Argento",
+  "LOTRRP.CoinsCP": "Monete di Rame",
+  "LOTRRP.CoinsAbbrGP": "GP",
+  "LOTRRP.CoinsAbbrSP": "SP",
+  "LOTRRP.CoinsAbbrCC": "CC",
+  "LOTRRP.AbilitySha": "Ombra",
+  "LOTRRP.AbilityPerm": "Permanente",
+  "LOTRRP.SkillLor": "Sapienza",
+  "LOTRRP.SkillRid": "Indovinelli",
+  "LOTRRP.SkillSha": "Sapienza dell'Ombra",
+  "LOTRRP.SkillTra": "Tradizioni",
+  "LOTRRP.SkillIns": "Intuizione",
+  "LOTRRP.LanguagesCommon": "Ovestron",
+  "LOTRRP.LanguagesBlackSpeech": "Linguaggio Nero",
+  "LOTRRP.LanguagesQuenya": "Quenya",
+  "LOTRRP.LanguagesSindarin": "Sindarin",
+  "LOTRRP.LanguagesDalish": "Daliano",
+  "LOTRRP.LanguagesVale": "Lingua delle Valli dell'Anduin",
+  "LOTRRP.LanguagesDwarvish": "Khuzdul",
+  "LOTRRP.LanguagesWoodland": "Lingua del Bosco",
+  "LOTRRP.LanguagesRohan": "Rohirric",
+  "LOTRRP.LanguagesOrkish": "Orchesco",
+  "LOTRRP.Audience": "Udienze",
+  "LOTRRP.Journey": "Viaggio",
+  "LOTRRP.Adventure": "Avventura",
   "DND5E.PersonalityTraits": "Qualita' Distintiva",
   "DND5E.Ideals": "Specialita'",
   "DND5E.Bonds": "Speranza",
@@ -32,6 +32,6 @@
   "DND5E.AbilityShaAbbr": "omb",
   "DND5E.AbilityPermAbbr": "per",
   "DND5E.Race": "Cultura",
-  "AIME.LivingStandard": "Standard di vita",
-  "AIME.Miserable": "Misero"
+  "LOTRRP.LivingStandard": "Standard di vita",
+  "LOTRRP.Miserable": "Misero"
 }
