--- a/lang/de.json
+++ b/lang/de.json
@@ -1,29 +1,29 @@
 {
-  "AIME.CoinsGP": "Goldstücke",
-  "AIME.CoinsSP": "Silberpfennige",
-  "AIME.CoinsCP": "Kupfermünzen",
-  "AIME.CoinsAbbrGP": "GS",
-  "AIME.CoinsAbbrSP": "SP",
-  "AIME.CoinsAbbrCC": "KM",
-  "AIME.AbilitySha": "Schatten",
-  "AIME.AbilityPerm": "Permanent",
-  "AIME.SkillLor": "Legendenkunde",
-  "AIME.SkillRid": "Rätseln",
-  "AIME.SkillSha": "Schattenkunde",
-  "AIME.SkillTra": "Gebräuche",
-  "AIME.SkillIns": "Motiv erkennen",
-  "AIME.LanguagesCommon": "Westron",
-  "AIME.LanguagesBlackSpeech": "Schwarze Sprache",
-  "AIME.LanguagesQuenya": "Quenya",
-  "AIME.LanguagesSindarin": "Sindarin",
-  "AIME.LanguagesDalish": "Thalisch",
-  "AIME.LanguagesVale": "Sprache der Täler des Anduin",
-  "AIME.LanguagesDwarvish": "Khuzdul",
-  "AIME.LanguagesWoodland": "Waldreichzunge",
-  "AIME.LanguagesRohan": "Zunge Rohans",
-  "AIME.LanguagesOrkish": "Orkisch",
-  "AIME.Journey": "Reise",
-  "AIME.Adventure": "Abenteuer",
+  "LOTRRP.CoinsGP": "Goldstücke",
+  "LOTRRP.CoinsSP": "Silberpfennige",
+  "LOTRRP.CoinsCP": "Kupfermünzen",
+  "LOTRRP.CoinsAbbrGP": "GS",
+  "LOTRRP.CoinsAbbrSP": "SP",
+  "LOTRRP.CoinsAbbrCC": "KM",
+  "LOTRRP.AbilitySha": "Schatten",
+  "LOTRRP.AbilityPerm": "Permanent",
+  "LOTRRP.SkillLor": "Legendenkunde",
+  "LOTRRP.SkillRid": "Rätseln",
+  "LOTRRP.SkillSha": "Schattenkunde",
+  "LOTRRP.SkillTra": "Gebräuche",
+  "LOTRRP.SkillIns": "Motiv erkennen",
+  "LOTRRP.LanguagesCommon": "Westron",
+  "LOTRRP.LanguagesBlackSpeech": "Schwarze Sprache",
+  "LOTRRP.LanguagesQuenya": "Quenya",
+  "LOTRRP.LanguagesSindarin": "Sindarin",
+  "LOTRRP.LanguagesDalish": "Thalisch",
+  "LOTRRP.LanguagesVale": "Sprache der Täler des Anduin",
+  "LOTRRP.LanguagesDwarvish": "Khuzdul",
+  "LOTRRP.LanguagesWoodland": "Waldreichzunge",
+  "LOTRRP.LanguagesRohan": "Zunge Rohans",
+  "LOTRRP.LanguagesOrkish": "Orkisch",
+  "LOTRRP.Journey": "Reise",
+  "LOTRRP.Adventure": "Abenteuer",
   "DND5E.PersonalityTraits": "Eigenheiten",
   "DND5E.Ideals": "Spezialisierung",
   "DND5E.Bonds": "Hoffnung",
@@ -31,6 +31,6 @@
   "DND5E.AbilityShaAbbr": "sch",
   "DND5E.AbilityPermAbbr": "per",
   "DND5E.Race": "Kultur",
-  "AIME.LivingStandard": "Lebensstandard",
-  "AIME.Miserable": "Miserabel"
+  "LOTRRP.LivingStandard": "Lebensstandard",
+  "LOTRRP.Miserable": "Miserabel"
 }
