--- a/lang/en.json
+++ b/lang/en.json
@@ -1,29 +1,30 @@
 {
-  "AIME.CoinsGP": "Gold pieces",
-  "AIME.CoinsSP": "Silver Pennies",
-  "AIME.CoinsCC": "Copper Coins",
-  "AIME.CoinsAbbrGP": "GP",
-  "AIME.CoinsAbbrSP": "SP",
-  "AIME.CoinsAbbrCC": "CC",
-  "AIME.AbilitySha": "Shadow",
-  "AIME.AbilityPerm": "Permanent",
-  "AIME.SkillLor": "Lore",
-  "AIME.SkillRid": "Riddle",
-  "AIME.SkillSha": "Shadow-Lore",
-  "AIME.SkillTra": "Traditions",
-  "AIME.SkillIns": "Insight",
-  "AIME.LanguagesCommon": "Westron",
-  "AIME.LanguagesBlackSpeech": "Black Speech",
-  "AIME.LanguagesQuenya": "Quenya",
-  "AIME.LanguagesSindarin": "Sindarin",
-  "AIME.LanguagesDalish": "Dalish",
-  "AIME.LanguagesVale": "Vale of Anduin Tongues",
-  "AIME.LanguagesDwarvish": "Khuzdul",
-  "AIME.LanguagesWoodland": "Woodland Tongue",
-  "AIME.LanguagesRohan": "Rohirric",
-  "AIME.LanguagesOrkish": "Orkish",
-  "AIME.Journey": "Journey",
-  "AIME.Adventure": "Adventure",
+  "LOTRRP.CoinsGP": "Gold pieces",
+  "LOTRRP.CoinsSP": "Silver Pennies",
+  "LOTRRP.CoinsCC": "Copper Coins",
+  "LOTRRP.CoinsAbbrGP": "GP",
+  "LOTRRP.CoinsAbbrSP": "SP",
+  "LOTRRP.CoinsAbbrCC": "CC",
+  "LOTRRP.AbilitySha": "Shadow",
+  "LOTRRP.AbilityPerm": "Permanent",
+  "LOTRRP.SkillLor": "Old Lore",
+  "LOTRRP.SkillHun": "Hunting",
+  "LOTRRP.SkillRid": "Riddle",
+  "LOTRRP.SkillExp": "Explore",
+  "LOTRRP.SkillTra": "Travel",
+  // "LOTRRP.SkillIns": "Insight",
+  "LOTRRP.LanguagesCommon": "Westron",
+  "LOTRRP.LanguagesBlackSpeech": "Black Speech",
+  "LOTRRP.LanguagesQuenya": "Quenya",
+  "LOTRRP.LanguagesSindarin": "Sindarin",
+  "LOTRRP.LanguagesDalish": "Dalish",
+  "LOTRRP.LanguagesVale": "Vale of Anduin Tongues",
+  "LOTRRP.LanguagesDwarvish": "Khuzdul",
+  "LOTRRP.LanguagesWoodland": "Woodland Tongue",
+  "LOTRRP.LanguagesRohan": "Rohirric",
+  "LOTRRP.LanguagesOrkish": "Orkish",
+  "LOTRRP.Journey": "Journey",
+  "LOTRRP.Adventure": "Adventure",
   "DND5E.PersonalityTraits": "Distinctive Quality",
   "DND5E.Ideals": "Speciality",
   "DND5E.Bonds": "Hope",
@@ -31,8 +32,8 @@
   "DND5E.AbilityShaAbbr": "sha",
   "DND5E.AbilityPermAbbr": "per",
   "DND5E.Race": "Culture",
-  "AIME.LivingStandard": "Standard of Living",
-  "AIME.Miserable": "Miserable",
-  "AIME.Settings.SpellbookToggle.name": "Disable Spellbook tab",
-  "AIME.Settings.SpellbookToggle.hint": "Disables the spellbook tab on character sheets."
+  "LOTRRP.LivingStandard": "Standard of Living",
+  "LOTRRP.Miserable": "Miserable",
+  "LOTRRP.Settings.SpellbookToggle.name": "Disable Spellbook tab",
+  "LOTRRP.Settings.SpellbookToggle.hint": "Disables the spellbook tab on character sheets."
 }
