--- a/lang/es.json
+++ b/lang/es.json
@@ -1,29 +1,29 @@
 {
-  "AIME.CoinsGP": "Oro",
-  "AIME.CoinsSP": "Peniques de plata",
-  "AIME.CoinsCP": "Monedas de cobre",
-  "AIME.CoinsAbbrGP": "GP",
-  "AIME.CoinsAbbrSP": "SP",
-  "AIME.CoinsAbbrCC": "CC",
-  "AIME.AbilitySha": "Sombra",
-  "AIME.AbilityPerm": "Permanente",
-  "AIME.SkillLor": "Saber",
-  "AIME.SkillRid": "Acertijos",
-  "AIME.SkillSha": "Saber de la Sombra",
-  "AIME.SkillTra": "Tradiciones",
-  "AIME.SkillIns": "Perspicacia",
-  "AIME.LanguagesCommon": "Oestron",
-  "AIME.LanguagesBlackSpeech": "Lengua negra",
-  "AIME.LanguagesQuenya": "Quenya",
-  "AIME.LanguagesSindarin": "Sindarin",
-  "AIME.LanguagesDalish": "Vallense",
-  "AIME.LanguagesVale": "Idioma del valle del Anduin",
-  "AIME.LanguagesDwarvish": "Khuzdul",
-  "AIME.LanguagesWoodland": "Lengua del bosque",
-  "AIME.LanguagesRohan": "Rohírrico",
-  "AIME.LanguagesOrkish": "Orco",
-  "AIME.Journey": "Viaje",
-  "AIME.Adventure": "Aventura",
+  "LOTRRP.CoinsGP": "Oro",
+  "LOTRRP.CoinsSP": "Peniques de plata",
+  "LOTRRP.CoinsCP": "Monedas de cobre",
+  "LOTRRP.CoinsAbbrGP": "GP",
+  "LOTRRP.CoinsAbbrSP": "SP",
+  "LOTRRP.CoinsAbbrCC": "CC",
+  "LOTRRP.AbilitySha": "Sombra",
+  "LOTRRP.AbilityPerm": "Permanente",
+  "LOTRRP.SkillLor": "Saber",
+  "LOTRRP.SkillRid": "Acertijos",
+  "LOTRRP.SkillSha": "Saber de la Sombra",
+  "LOTRRP.SkillTra": "Tradiciones",
+  "LOTRRP.SkillIns": "Perspicacia",
+  "LOTRRP.LanguagesCommon": "Oestron",
+  "LOTRRP.LanguagesBlackSpeech": "Lengua negra",
+  "LOTRRP.LanguagesQuenya": "Quenya",
+  "LOTRRP.LanguagesSindarin": "Sindarin",
+  "LOTRRP.LanguagesDalish": "Vallense",
+  "LOTRRP.LanguagesVale": "Idioma del valle del Anduin",
+  "LOTRRP.LanguagesDwarvish": "Khuzdul",
+  "LOTRRP.LanguagesWoodland": "Lengua del bosque",
+  "LOTRRP.LanguagesRohan": "Rohírrico",
+  "LOTRRP.LanguagesOrkish": "Orco",
+  "LOTRRP.Journey": "Viaje",
+  "LOTRRP.Adventure": "Aventura",
   "DND5E.PersonalityTraits": "Cualidad distintiva",
   "DND5E.Ideals": "Especialidad",
   "DND5E.Bonds": "Esperanza",
@@ -31,6 +31,6 @@
   "DND5E.AbilityShaAbbr": "som",
   "DND5E.AbilityPermAbbr": "per",
   "DND5E.Race": "Cultura",
-  "AIME.LivingStandard": "Nivel de vida",
-  "AIME.Miserable": "Miserable"
+  "LOTRRP.LivingStandard": "Nivel de vida",
+  "LOTRRP.Miserable": "Miserable"
 }
