--- a/lang/en.json
+++ b/lang/en.json
@@ -12,7 +12,7 @@
   "LOTRRP.SkillRid": "Riddle",
   "LOTRRP.SkillExp": "Explore",
   "LOTRRP.SkillTra": "Travel",
-  // "LOTRRP.SkillIns": "Insight",
+  "LOTRRP.SkillIns": "Insight",
   "LOTRRP.LanguagesCommon": "Westron",
   "LOTRRP.LanguagesBlackSpeech": "Black Speech",
   "LOTRRP.LanguagesQuenya": "Quenya",
